--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,19 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "modele\\": "src/modele/",
+            "app\\": "src/app/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "tests\\": "tests/"
+        }
     }
 }
+
+
+
