--- a/.htaccess
+++ b/.htaccess
@@ -8,10 +8,10 @@ RewriteEngine On
 #redirection de l'erreur 404 :
 ErrorDocument 404 /index.php?uri=404
 
-#masquer par une erreur 404 l'accès aux dossiers protégés et leurs contenus :
+#masquer par une erreur 404 l'accï¿½s aux dossiers protï¿½gï¿½s et leurs contenus :
 RewriteRule ^(app|controleur|modele|vendor|vue)(.*)$ - [R=404,L]
 
-#dans le cas où l'on souhaite afficher les types de fichiers en plus pour Composer :
+#dans le cas oï¿½ l'on souhaite afficher les types de fichiers en plus pour Composer :
 #RewriteRule ^(vendor)/(?!(.*\.(php|html|json|css|js|png|jpg|jpeg))$)(.*)$ - [R=404,L]
 
 #retire toutes les extensions (dont .php) :
