--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require": {
         "claviska/simpleimage": "^3.7"
+    },
+    "autoload": {
+        "psr-4": {
+            "modele\\": "modele/",
+            "app\\": "app/",
+            "config\\": "config/"
+        }
     }
 }
